Fix deprecation warnings and finalize IllegalStateException implementation
Co-authored-by: Kreijstal <2415206+Kreijstal@users.noreply.github.com>